--- a/src/app/shared/authentication/signin/signin.component.scss
+++ b/src/app/shared/authentication/signin/signin.component.scss
@@ -88,7 +88,7 @@ section.login {
     }
 
     button.start {
-      width: 343px;
+      width: 100%;
       height: 56px;
       border-radius: 4px;
       box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
