--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -186,6 +186,9 @@ section.profile {
           width: 25px;
           height: 25px;
           margin-right: 0.5em;
+          background: #373737;
+          border-radius: 8px;
+          padding: 2px;
         }
 
         p {
@@ -254,6 +257,24 @@ section.profile {
   }
 }
 
+.edit-mode {
+  width: 230px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  border-bottom: 1px solid #eaeaea;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.19;
+  letter-spacing: 0.21px;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.87);
+}
 
 .gunslist {
   width: 230px;
@@ -284,12 +305,14 @@ section.profile {
   margin-left: 16px;
   margin-bottom: 42px;
   margin-top: 48px;
+
   .top-row {
     display: flex;
-     margin-left: 16px;
+    margin-left: 16px;
     margin-top: 16px;
     margin-right: 16px;
     align-items: center;
+
     .svg-wrapper {
       height: 24px;
       width: 24px;
@@ -349,5 +372,240 @@ section.profile {
     align-self: center;
     margin-bottom: 16px;
     background-color: white;
+  }
+}
+
+.round-border {
+  img {
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+  }
+}
+
+.my-target-name {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.19;
+  letter-spacing: 0.21px;
+  text-align: left;
+  color: #4d89f5;
+  margin-left: 18px;
+}
+
+
+header {
+  position: relative;
+
+  background-image: linear-gradient(#00000054, #00000054), url("../../assets/edit-drill.jpg");
+  background-size: 100% 200px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 200px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  box-sizing: border-box;
+
+  div {
+    display: flex;
+    align-items: center;
+    padding-top: 40px;
+    justify-content: center;
+
+    p {
+      color: white;
+      margin: 0;
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 0.26px;
+    }
+
+    svg {
+      width: 35px;
+      height: 35px;
+      position: absolute;
+      left: 1em;
+    }
+
+  }
+
+
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  bottom: -50px;
+  border-radius: 100%;
+  background: #848889;
+  padding: 0.5em;
+}
+
+
+.change-photo-title {
+  color: #4d89f5;
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.17;
+  letter-spacing: 0.15px;
+  text-align: left;
+  color: #4d89f5;
+  margin: 0;
+  margin-top: 70px;
+  text-align: center;
+}
+
+
+form.signInForm {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  div.row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+
+    label {
+      position: relative;
+      box-sizing: border-box;
+      padding: 0.5em;
+      width: 100%;
+      height: 42px;
+      div {
+        display: flex;
+        align-items: center;
+        span {
+          margin-left: 16px;
+          margin-right: 64px;
+        }
+      }
+    }
+
+    p {
+      position: absolute;
+      margin: 0;
+      height: 14px;
+      font-size: 12px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.17;
+      letter-spacing: 0.4px;
+      text-align: left;
+      color: #bfbfbf;
+
+      padding: 0 10px;
+      z-index: 1;
+      transition: all 0.3s;
+
+      transform: translateY(-50%);
+      top: 50%;
+      left: 20px;
+
+    }
+
+    input {
+      height: 43px;
+      border-radius: 4px;
+      opacity: 0.5;
+      border: solid 1px #000000;
+      width: 214px;
+      color: #000;
+      box-sizing: border-box;
+      padding: 0.5em;
+      margin-left: 145px;
+    }
+
+    select {
+      height: 43px;
+      border-radius: 4px;
+      opacity: 0.5;
+      border: solid 1px #000000;
+      width: 214px;
+      color: #000;
+      box-sizing: border-box;
+      padding: 0.5em;
+      margin-left: 145px;
+    }
+
+    svg.eye {
+      width: 24px;
+      height: 24px;
+      position: absolute;
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
+    }
+
+    label.hasValue p,
+    label:focus-within p {
+      top: 0;
+      transform: translateY(0%);
+      left: 20px;
+      background-color: white;
+    }
+  }
+
+  // Errors
+  div.errors {
+    box-sizing: border-box;
+    padding: 0 10px;
+
+    p {
+      font-size: 12px;
+      line-height: 1.17;
+      letter-spacing: 0.4px;
+      text-align: left;
+      color: #ce564b;
+      margin: 0;
+    }
+  }
+}
+
+.edit-row {
+  display: flex;
+  align-items: center;
+
+  .title {
+    margin-left: 16px;
+  }
+
+  .edit-mode {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 157px;
+    WIDTH: 100%;
+    margin-right: 16px;
+
+    img {
+      width: 15px;
+      height: 15px;
+    }
+
+    .email {
+      font-family: Roboto;
+      font-size: 16px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.19;
+      letter-spacing: 0.21px;
+      text-align: left;
+      color: #4d89f5;
+    }
   }
 }
