--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -6,7 +6,7 @@ section.dashboard {
   width: 100%;
   height: 100%;
   position: relative;
-
+  overflow: auto;
   background-image: url("/assets/dashboard-bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -47,7 +47,7 @@ section.dashboard {
       border-radius: 38px;
       margin-right: 26px;
 
-      background-image: url("/assets/avatar.jpg");
+      background-image: url("/assets/lavi.jpg");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
