--- a/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
+++ b/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
@@ -137,7 +137,7 @@
         </div>
         <div class="controls">
             <button class="confirm" (click)="activeNextStep()">ACCEPT AND CONTINUE</button>
-            <button class="cancel">CANCEL</button>
+            <button class="cancel" [routerLink]="'/'">CANCEL</button>
         </div>
     </ng-container>
 
