--- a/src/app/shared/authentication/signin/signin.component.html
+++ b/src/app/shared/authentication/signin/signin.component.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
-                    <input  formControlName="email" matInput placeholder="Email">
+                    <input formControlName="email" matInput placeholder="Email">
                 </mat-form-field>
                 <div class="errors" *ngIf="submitted && f.email.errors">
                     <p class="error-message" *ngIf="f.email.errors.required">Email is required</p>
@@ -19,7 +19,7 @@
             <div class="row">
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input  formControlName="password" type="password" matInput placeholder="Password">
+                    <input formControlName="password" type="password" matInput placeholder="Password">
                 </mat-form-field>
                 <div class="errors" *ngIf="submitted && f.password.errors">
                     <p class="error-message" *ngIf="f.password.errors.required">Password is required</p>
@@ -31,9 +31,9 @@
         <button class="start" (click)="onLogin()">START SESSION</button>
         <p class="forgot">Forgot your password?</p>
     </div>
-
-    <a (click)="goToSignUp()">Create an account</a>
-
+    <div class="create-account-container">
+        <a (click)="goToSignUp()">Create an account</a>
+    </div>
 
 </section>
 
