--- a/src/app/shared/drill/drill.component.html
+++ b/src/app/shared/drill/drill.component.html
@@ -21,11 +21,11 @@
         </div>
 
         <div class="info">
-            <p>{{drill.drillType}}t</p>
+            <p>{{drill?.drillType}}t</p>
             <p class="seperator">|</p>
-            <p>{{drill.weapon}}</p>
+            <p>{{drill?.weapon}}</p>
             <p class="seperator">|</p>
-            <p>{{drill.range}}</p>
+            <p>{{drill?.range}}</p>
             <p>Meters</p>
         </div>
 
@@ -41,37 +41,37 @@
         <button *ngIf="!drillHasNotStarted" class="start" (click)="restartShooting()">RESTART</button>
     </header>
     <div class="main-screen">
-<!--        <div class="connection-details">-->
-<!--            <div class="row">-->
-<!--                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14">-->
-<!--                    <g id="Connected-icon-2709" transform="translate(-374 -11)">-->
-<!--                        <path id="Rectangle_366" fill="none" d="M0 0H14V14H0z" data-name="Rectangle 366"-->
-<!--                              transform="translate(374 11)"/>-->
-<!--                        <path id="iconUnion" fill="rgba(0,0,0,0.6)"-->
-<!--                              d="M1.962 9.386a6.642 6.642 0 0 1-.817-.973 6.543 6.543 0 0 1-.619-1.119 6.489 6.489 0 0 1 0-5.119 6.533 6.533 0 0 1 .617-1.117A6.649 6.649 0 0 1 1.96.084L2.048 0l.894.956a5.187 5.187 0 0 0 .016 7.471c-.345.348-.677.674-.986.969zm9.453.009zm-.969-.943a5.187 5.187 0 0 0 .08-7.459l.908-.9a6.659 6.659 0 0 1 .81.966 6.552 6.552 0 0 1 .617 1.117 6.494 6.494 0 0 1 0 5.119 6.548 6.548 0 0 1-.617 1.117 6.653 6.653 0 0 1-.817.973l-.008.008zM3.881 7.434zm-.007-.007A3.851 3.851 0 0 1 3.031 6.2a3.816 3.816 0 0 1 0-3.01 3.852 3.852 0 0 1 .843-1.23l.052-.05.727.777a2.665 2.665 0 0 0-.828 1.934 2.7 2.7 0 0 0 .886 1.989c-.293.3-.572.578-.83.824zm5.558.006zm-.91-.886a2.672 2.672 0 0 0 .091-3.758l.83-.824a3.848 3.848 0 0 1 .838 1.225 3.82 3.82 0 0 1 0 3.01 3.85 3.85 0 0 1-.843 1.228zm-3.006-1.89a1.1 1.1 0 1 1 1.1 1.084 1.094 1.094 0 0 1-1.1-1.084z"-->
-<!--                              transform="translate(374.307 13.268)"/>-->
-<!--                    </g>-->
-<!--                </svg>-->
-<!--                <p>Connected</p>-->
-<!--            </div>-->
+        <!--        <div class="connection-details">-->
+        <!--            <div class="row">-->
+        <!--                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14">-->
+        <!--                    <g id="Connected-icon-2709" transform="translate(-374 -11)">-->
+        <!--                        <path id="Rectangle_366" fill="none" d="M0 0H14V14H0z" data-name="Rectangle 366"-->
+        <!--                              transform="translate(374 11)"/>-->
+        <!--                        <path id="iconUnion" fill="rgba(0,0,0,0.6)"-->
+        <!--                              d="M1.962 9.386a6.642 6.642 0 0 1-.817-.973 6.543 6.543 0 0 1-.619-1.119 6.489 6.489 0 0 1 0-5.119 6.533 6.533 0 0 1 .617-1.117A6.649 6.649 0 0 1 1.96.084L2.048 0l.894.956a5.187 5.187 0 0 0 .016 7.471c-.345.348-.677.674-.986.969zm9.453.009zm-.969-.943a5.187 5.187 0 0 0 .08-7.459l.908-.9a6.659 6.659 0 0 1 .81.966 6.552 6.552 0 0 1 .617 1.117 6.494 6.494 0 0 1 0 5.119 6.548 6.548 0 0 1-.617 1.117 6.653 6.653 0 0 1-.817.973l-.008.008zM3.881 7.434zm-.007-.007A3.851 3.851 0 0 1 3.031 6.2a3.816 3.816 0 0 1 0-3.01 3.852 3.852 0 0 1 .843-1.23l.052-.05.727.777a2.665 2.665 0 0 0-.828 1.934 2.7 2.7 0 0 0 .886 1.989c-.293.3-.572.578-.83.824zm5.558.006zm-.91-.886a2.672 2.672 0 0 0 .091-3.758l.83-.824a3.848 3.848 0 0 1 .838 1.225 3.82 3.82 0 0 1 0 3.01 3.85 3.85 0 0 1-.843 1.228zm-3.006-1.89a1.1 1.1 0 1 1 1.1 1.084 1.094 1.094 0 0 1-1.1-1.084z"-->
+        <!--                              transform="translate(374.307 13.268)"/>-->
+        <!--                    </g>-->
+        <!--                </svg>-->
+        <!--                <p>Connected</p>-->
+        <!--            </div>-->
 
-<!--            <div class="row">-->
-<!--                <svg xmlns="http://www.w3.org/2000/svg" width="12.795" height="8" viewBox="0 0 12.795 8">-->
-<!--                    <g id="low-battery" transform="translate(0 -4)">-->
-<!--                        <path id="Path_1171" fill="none"-->
-<!--                              d="M11.049 9.806v.481a.984.984 0 0 1-1 .963H1.755a.984.984 0 0 1-1-.963V5.713a.984.984 0 0 1 1-.963h8.29a.984.984 0 0 1 1 .963v.481h.5a.492.492 0 0 1 .5.481v2.649a.492.492 0 0 1-.5.481z"-->
-<!--                              data-name="Path 1171"/>-->
-<!--                        <path id="Path_1172" fill="rgba(0,0,0,0.6)"-->
-<!--                              d="M10.267 12h-8.8A1.468 1.468 0 0 1 0 10.533V5.467A1.468 1.468 0 0 1 1.467 4h8.8a1.468 1.468 0 0 1 1.467 1.467V5.6h.129a.934.934 0 0 1 .933.933v2.934a.934.934 0 0 1-.933.933h-.129v.133A1.468 1.468 0 0 1 10.267 12zm-8.8-7.2a.668.668 0 0 0-.667.667v5.067a.668.668 0 0 0 .667.667h8.8a.668.668 0 0 0 .667-.667V10a.4.4 0 0 1 .4-.4h.529A.133.133 0 0 0 12 9.467V6.533a.133.133 0 0 0-.133-.133h-.529a.4.4 0 0 1-.4-.4v-.533a.668.668 0 0 0-.667-.667z"-->
-<!--                              data-name="Path 1172"/>-->
-<!--                        <path id="Path_1173" fill="#ce564b"-->
-<!--                              d="M3.75 11c-.414 0-.75-.149-.75-.333V7.333C3 7.149 3.336 7 3.75 7s.75.149.75.333v3.333c0 .185-.336.334-.75.334z"-->
-<!--                              data-name="Path 1173" transform="translate(-1.085 -1)"/>-->
-<!--                    </g>-->
-<!--                </svg>-->
-<!--                <p>10%</p>-->
-<!--            </div>-->
-<!--        </div>-->
+        <!--            <div class="row">-->
+        <!--                <svg xmlns="http://www.w3.org/2000/svg" width="12.795" height="8" viewBox="0 0 12.795 8">-->
+        <!--                    <g id="low-battery" transform="translate(0 -4)">-->
+        <!--                        <path id="Path_1171" fill="none"-->
+        <!--                              d="M11.049 9.806v.481a.984.984 0 0 1-1 .963H1.755a.984.984 0 0 1-1-.963V5.713a.984.984 0 0 1 1-.963h8.29a.984.984 0 0 1 1 .963v.481h.5a.492.492 0 0 1 .5.481v2.649a.492.492 0 0 1-.5.481z"-->
+        <!--                              data-name="Path 1171"/>-->
+        <!--                        <path id="Path_1172" fill="rgba(0,0,0,0.6)"-->
+        <!--                              d="M10.267 12h-8.8A1.468 1.468 0 0 1 0 10.533V5.467A1.468 1.468 0 0 1 1.467 4h8.8a1.468 1.468 0 0 1 1.467 1.467V5.6h.129a.934.934 0 0 1 .933.933v2.934a.934.934 0 0 1-.933.933h-.129v.133A1.468 1.468 0 0 1 10.267 12zm-8.8-7.2a.668.668 0 0 0-.667.667v5.067a.668.668 0 0 0 .667.667h8.8a.668.668 0 0 0 .667-.667V10a.4.4 0 0 1 .4-.4h.529A.133.133 0 0 0 12 9.467V6.533a.133.133 0 0 0-.133-.133h-.529a.4.4 0 0 1-.4-.4v-.533a.668.668 0 0 0-.667-.667z"-->
+        <!--                              data-name="Path 1172"/>-->
+        <!--                        <path id="Path_1173" fill="#ce564b"-->
+        <!--                              d="M3.75 11c-.414 0-.75-.149-.75-.333V7.333C3 7.149 3.336 7 3.75 7s.75.149.75.333v3.333c0 .185-.336.334-.75.334z"-->
+        <!--                              data-name="Path 1173" transform="translate(-1.085 -1)"/>-->
+        <!--                    </g>-->
+        <!--                </svg>-->
+        <!--                <p>10%</p>-->
+        <!--            </div>-->
+        <!--        </div>-->
         <div class="targetHoly" *ngIf="!showResults">
             <div class="welcome-message" *ngIf="!showResults">
                 <div class="text">
@@ -219,9 +219,9 @@
                     <tbody>
                     <tr *ngFor="let shot of stats; let i = index">
                         <td>{{i + 1}}</td>
-                        <td> {{shot.pageData.points}}</td>
-                        <td> {{shot.pageData.totalTime}}</td>
-                        <td> {{shot.pageData.splitTime}}</td>
+                        <td> {{shot?.pageData?.points}}</td>
+                        <td> {{shot?.pageData?.totalTime}}</td>
+                        <td> {{shot?.pageData?.splitTime}}</td>
                     </tr>
                     </tbody>
                 </table>
@@ -229,22 +229,26 @@
                 <p *ngIf="!isHitNoHit" class="flashing-number">{{shotNumber }}</p>
                 <!-- IF the is a loop then place this outside the loop -->
                 <div class="table-sum">
-                    <p> total:{{stats.length}} of {{drill.numOfBullets}}</p>
-                    <p> {{summaryObject.points}}</p>
-                    <p>{{summaryObject.totalTime}}</p>
-                    <p> {{summaryObject.split}}</p>
+                    <p> total:{{stats?.length}} of {{drill?.numOfBullets}}</p>
+                    <p> {{summaryObject?.points}}</p>
+                    <p>{{summaryObject?.totalTime}}</p>
+                    <p> {{summaryObject?.split}}</p>
                 </div>
             </div>
         </div>
-
-
 
 
         <div class="target" *ngIf="showResults">
             <div class="some-wrapper">
                 <img *ngIf="!drillIsFinished" src="assets/bullseye.png">
                 <img *ngIf="drillIsFinished" src="assets/bullseye-finish.png">
-                <div class="counter-shot">{{shotNumber}}</div>
+                <!--                <div class="counter-shot">{{shotNumber}}</div>-->
+                <div class="hit" *ngFor="let shot of shots; let i = index" style="position: absolute;  "
+                     [style.top.px]=shot.y
+                     [style.right.px]=shot.x>
+                    {{i + 1}}
+                </div>
+
             </div>
             <div class="welcome-message" *ngIf="!showResults">
                 <div class="text">
@@ -340,7 +344,7 @@
                             </svg>
                         </th>
                         <th>
-                            <p>Time</p>
+                            <p> From Center</p>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <defs>
                                     <style>
@@ -375,6 +379,42 @@
                             </svg>
                         </th>
                         <th>
+                            <p>Time</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <defs>
+                                    <style>
+                                        .cls-3 {
+                                            fill: #fff
+                                        }
+                                    </style>
+                                </defs>
+                                <g id="Icon_Favorite_Filled" data-name="Icon / Favorite / Filled"
+                                   transform="translate(.286)">
+                                    <path id="Box" fill="none" d="M0 0H18V18H0z" transform="translate(2.714 3)"/>
+                                    <rect id="Rectangle_1866" width="24" height="24" fill="#363636"
+                                          data-name="Rectangle 1866" rx="5" transform="translate(-.286)"/>
+                                    <g id="_003-time" data-name="003-time" transform="translate(6.218 6)">
+                                        <g id="Group_624" data-name="Group 624">
+                                            <g id="Group_623" data-name="Group 623">
+                                                <path id="Path_1180"
+                                                      d="M6 0a6 6 0 1 0 6 6 6 6 0 0 0-6-6zm0 11.143A5.143 5.143 0 1 1 11.143 6 5.143 5.143 0 0 1 6 11.143z"
+                                                      class="cls-3" data-name="Path 1180"/>
+                                            </g>
+                                        </g>
+                                        <g id="Group_626" data-name="Group 626" transform="translate(2.143 2.143)">
+                                            <g id="Group_625" data-name="Group 625">
+                                                <path id="Path_1181"
+                                                      d="M89.19 85.333a.429.429 0 0 0-.429.429v3h-3a.429.429 0 0 0 0 .857h3.429a.429.429 0 0 0 .429-.429v-3.428a.429.429 0 0 0-.429-.429z"
+                                                      class="cls-3" data-name="Path 1181"
+                                                      transform="translate(-85.333 -85.333)"/>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                        </th>
+
+                        <th>
                             <p>Split</p>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <g id="Icon_Favorite_Filled" data-name="Icon / Favorite / Filled"
@@ -392,8 +432,9 @@
                     </thead>
                     <tbody>
                     <tr *ngFor="let shot of stats; let i = index">
-                        <td>{{i + 1}}</td>
+                        <td>{{shot.pageData.index}}</td>
                         <td> {{shot.pageData.points}}</td>
+                        <td> {{shot.pageData.distanceFromCenter}}</td>
                         <td> {{shot.pageData.totalTime}}</td>
                         <td> {{shot.pageData.splitTime}}</td>
                     </tr>
@@ -403,10 +444,10 @@
                 <p *ngIf="!isHitNoHit" class="flashing-number">{{shotNumber }}</p>
                 <!-- IF the is a loop then place this outside the loop -->
                 <div class="table-sum">
-                    <p> total:{{stats.length}} of {{drill.numOfBullets}}</p>
-                    <p> {{summaryObject.points}}</p>
-                    <p>{{summaryObject.totalTime}}</p>
-                    <p> {{summaryObject.split}}</p>
+                    <p> total:{{stats?.length}} of {{drill?.numOfBullets}}</p>
+                    <p> {{summaryObject?.points}}</p>
+                    <p>{{summaryObject?.totalTime}}</p>
+                    <p> {{summaryObject?.split}}</p>
                 </div>
             </div>
         </div>
