--- a/src/app/shared/select-target-modal/select-target.component.scss
+++ b/src/app/shared/select-target-modal/select-target.component.scss
@@ -89,8 +89,11 @@ section {
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: 35px;
-
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
       img {
         width: 178px;
         height: 178px;
@@ -107,7 +110,7 @@ section {
       margin-right: 16px;
       width: calc(100% - 34px);
       align-items: center;
-
+      z-index: 9999;
       .btn-connect {
         width: 343px;
         height: 56px;
@@ -211,6 +214,7 @@ section {
 }
 
 .scan-container {
+  z-index: 9999;
   display: flex;
   align-items: center;
 
@@ -255,6 +259,7 @@ section {
     text-align: center;
     color: #ce564b;
     margin-right: 24px;
+    z-index: 9999;
   }
 }
 
