Hit and Accurate together

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-
+<div class="loader-wrapper" *ngIf="isLoding">
+    <span> Please Wait</span>
+    <img src="../assets/icons/loader.gif">
+</div>
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+    <ion-router-outlet></ion-router-outlet>
 </ion-app>
+
+
