--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -336,7 +336,7 @@
             </div>
         </div>
 
-        <button class="startSessionBtn" (click)="startSesstion()" routerLink="/home/tabs/tab2/select2"> START SESSION
+        <button class="startSessionBtn" (click)="startSesstion()" routerLink="/tab2/select2"> START SESSION
         </button>
 
     </div>
