--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -28,6 +28,10 @@
     <param name="onload" value="true"/>
   </feature>
 
+  <feature name="PreviewAnyFile">
+    <param name="android-package" value="com.mostafa.previewanyfile.PreviewAnyFile"/>
+  </feature>
+
   <feature name="CDVOrientation">
     <param name="android-package" value="cordova.plugins.screenorientation.CDVOrientation"/>
   </feature>
