--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,9 +4,43 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  .sentences{
+
+  .sentences {
     display: flex;
     width: 100%;
     justify-content: space-around;
   }
 }
+
+.loader-wrapper {
+  position: absolute;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.87;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  img {
+    width: 75px;
+    height: 75px;
+
+  }
+
+  span {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.14;
+    letter-spacing: 1.25px;
+    text-align: center;
+    color: #ffffff;
+  }
+}
+
+//
