--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 
 <ion-tabs (ionTabsWillChange)="ionTabsWillChange($event)">
     <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="tab1" [routerLink]="'/home/tabs/tab1'">
+        <ion-tab-button tab="tab1" [routerLink]="'/'">
             <div class="icon" [ngClass]="{'active': isRout() === 'tab1'}">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.595 24.578">
                     <defs>
@@ -20,8 +20,8 @@
             </div>
         </ion-tab-button>
 
-        <ion-tab-button tab="tab2" [routerLink]="'/home/tabs/tab2'">
-            <div class="icon" [ngClass]="{'active': isRout() === 'tab2'}">
+        <ion-tab-button tab="tab2" [routerLink]="'/tab2'">
+            <div class="icon" [ngClass]="{'active': isRout() === 'tab2'}" style="height: 50px;width: 50px;box-shadow: 1px 1px 3px 2px rgb(77 68 40);border-radius: 5px;">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.71 32.76">
                     <defs>
                         <style>
@@ -77,7 +77,7 @@
             </div>
         </ion-tab-button>
 
-        <ion-tab-button tab="tab3" [routerLink]="'/home/tabs/tab3'">
+        <ion-tab-button tab="tab3" [routerLink]="'/tab3'">
             <div class="icon" [ngClass]="{'active': isRout() === 'tab3'}">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                      viewBox="0 0 1000 1000">
